--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,15 +5,12 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
-
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.BROADCAST_STICKY" />
     <uses-permission android:name="android.permission.WRITE_SETTINGS" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-    <!--    <uses-permission android:name="com.android.vending.BILLING" />-->
-
 
     <application
         android:name=".BaseApp"
@@ -24,20 +21,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyMusic">
-        <!-- <activity android:name=".ExoPlayertest"></activity> -->
-        <service
-            android:name=".PlayService"
-            android:enabled="true"
-            android:exported="true" />
-
-        <activity android:name=".activity.MainActivity"
-            android:launchMode="singleInstance">
+        <activity
+            android:name=".activity.MainActivity"
+            android:theme="@style/Theme.MyMusic.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
+        <!-- <activity android:name=".ExoPlayertest"></activity> -->
+        <service
+            android:name=".PlayService"
+            android:enabled="true"
+            android:exported="true" />
     </application>
 
 </manifest>
