--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,4 +62,9 @@ dependencies {
 
     implementation 'com.github.bumptech.glide:glide:4.10.0'
 
+
+    implementation 'com.github.kabouzeid:AndroidSlidingUpPanel:6'
+    implementation 'me.zhanghai.android.materialprogressbar:library:1.6.1'
+
+
 }
