--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,7 +58,7 @@ dependencies {
     implementation 'com.permissionx.guolindev:permissionx:1.4.0'
 
     implementation "androidx.core:core-ktx:1.3.2"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.4.0"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.4.20"
 
     implementation 'com.github.bumptech.glide:glide:4.10.0'
 
@@ -66,6 +66,9 @@ dependencies {
     implementation 'com.github.kabouzeid:AndroidSlidingUpPanel:6'
     implementation 'me.zhanghai.android.materialprogressbar:library:1.6.1'
     implementation 'com.github.clans:fab:1.6.4'
+
+    implementation 'com.thegrizzlylabs.sardine-android:sardine-android:0.6'
+
 
 
 }
